<resources>
    <string name="app_name">MOM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="object_array">
        <item>Prepaid</item>
        <item>Postpaid</item>
    </string-array>
    <string name="Mobile">Mobile</string>
    <string name="Dth">DTH</string>
    <string name="bill_pay">BILL PAY</string>
    <string name="Lic">LIC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_Password">Forgot MPIN ?</string>
    <string name="forgot_PasswordLay">Forgot MPIN</string>
    <string name="gift_voucher">Gift Voucher</string>
    <string name="contact_us">Contact Us</string>
    <string name="book_comp">Book Complaint</string>
    <string name="enter_occassion">Enter Occasion</string>
    <string name="old_mpin">Old MPIN</string>
    <string name="new_mpin">New MPIN</string>
    <string name="con_mpin">Confirm New MPIN</string>
    <string name="con_mpin_dialog">Confirm Change MPIN</string>
    <string name="con_tpin_dialog">Confirm Change TPIN</string>
    <string name="mpin_exit">Do you want to change your MPIN</string>
    <string name="tpin_exit">Do you want to change your TPIN</string>
    <string name="submit">SUBMIT</string>
    <string name="change_mpin">Change MPIN</string>
    <string name="change_tpin">Change TPIN</string>
    <string name="old_tpin">Old TPIN</string>
    <string name="new_tpin">New TPIN</string>
    <string name="con_tpin">Confirm New TPIN</string>
    <string name="gift">Gift Voucher</string>
    <string name="enter_desc">Enter Description</string>
    <string name="sent_to">Sent to</string>
    <string name="sent_from">Send from</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="spinner_title">Select Operator</string>
    <string name="get_voucher">GET VOUCHER</string>
    <string name="enter_trans">Enter Transaction ID</string>
    <string name="enter_comment">Enter Coment</string>
    <string name="cancel">Cancel</string>
    <string name="book">Book Your Complaint</string>
    <string name="Transaction_history">Transaction History</string>
    <string name="setting">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="prepared_mobile">Prepaid Mobile History</string>
    <string name="prepared_mobile_history">Prepaid Mobile History</string>
    <string name="transaction_successfull">Transaction Successful</string>
    <string name="trasaction_id">Transaction ID:</string>
    <string name="tran_id">415244444444</string>
    <string name="trasaction_type">Transaction Type:</string>
    <string name="trasaction_type1">Vodafone Prepaid</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="mobile_number1">2222222222</string>
    <string name="amount">Amount:</string>
    <string name="amount1">50.00</string>
    <string name="tran_time">Transaction Time:</string>
    <string name="tran_time1">18 Aug 2015 1:48:25 PM</string>
    <string name="title_activity_home_activity">Home_activity</string>
    <string name="Login">Login</string>
    <string name="mobileno">Mobile Number</string>
    <string name="customerid">CustomerID</string>
    <string name="password">Password</string>
    <string name="mpin">MPIN</string>
    <string name="west_zone">West Zone</string>
    <string name="north_zone">North Zone</string>
    <string name="south_zone">South Zone</string>
    <string name="east_zone">East Zone</string>
    <string name="enterMobileno">Enter Mobile No.</string>
    <string name="entercustomerid">Enter CustomerID.</string>
    <string name="Contacts">Contacts</string>
    <string name="Pay">Pay</string>
    <string name="MobilePayments">Mobile Payments</string>
    <string name="dthRecharge">DTH Recharge</string>
    <string name="subscriberID">Subscriber ID</string>
    <string name="customerMobNo">Customers Mobile No.</string>
    <string name="enterRechargeAmount">Enter Recharge Amount</string>
    <string name="recharge">Recharge</string>
    <string name="billPayments">Utility Bill Payments</string>
    <string name="dueDate">Due Date</string>
    <string name="blueBill">Blue Bill</string>
    <string name="greenBill">Green Bill</string>
    <string name="timeNorth">Time  :09.00am-09.00pm IST</string>
    <string name="phoneNorth">Phone :+91–8039118009</string>
    <string name="emailNorth">E-mail :north.customercare@money-on-mobile.net</string>
    <string name="timeSouth">Time  :09.00am-09.00pm IST</string>
    <string name="phoneSouth">Phone :+91–8039118009</string>
    <string name="emailSouth">E-mail :south.customercare@money-on-mobile.net</string>
    <string name="timeEast">Time  :09.00am-09.00pm IST</string>
    <string name="phoneEast">Phone :+91–8039118009</string>
    <string name="emailEast">E-mail :east.customercare@money-on-mobile.net</string>
    <string name="timeWest">Time  :24*7</string>
    <string name="phoneWest">Phone :+91–8039118009</string>
    <string name="emailWest">E-mail :customercare@money-on-mobile.com</string>
    <string name="title_activity_splash">splash</string>
    <string name="money_order">Mobile Money Order</string>
    <string name="SEND">SEND</string>
    <string name="customer_no">Customer no.: 9167774825</string>
    <string name="available_limit">Available Limit:5000</string>
    <string name="full_kyc">Full KYC</string>
    <string name="beneficiary_name">Enter Beneficiary Name</string>
    <string name="beneficiary_acnt">Enter Beneficiary Account Number</string>
    <string name="beneficiary_ifsc_code_select">Enter IFSC CODE OR IFSC</string>
    <string name="ifsc_code">Enter IFSC Code</string>
    <string name="or">OR</string>
    <string name="ifsc"> IFSC </string>
    <string name="beneficiary_mobile">Enter Beneficiary Mobile Number</string>
    <string name="Verify">Verify</string>
    <string name="confirm_order">Confirm Mobile Money Order</string>
    <string name="beneficiary_name_profile">Beneficiary Name :</string>
    <string name="beneficiary_number_profile">Beneficiary Number :</string>
    <string name="bank_ifsc_code">Bank IFSC Code :</string>
    <string name="amount_profile">Amount :</string>
    <string name="processing_fees">Processing Fees :</string>
    <string name="amount_rs">Amount Payable :</string>
    <string name="ipin">IPIN :                                 ****</string>
    <string name="reset_ipin">Reset IPIN</string>
    <string name="reset_tpin">Reset TPIN</string>
    <string name="configure_mpos">Configure MPOS</string>
    <string name="trans_success">Your Transaction is Successful</string>
    <string name="new_transaction">New Transaction</string>
    <string name="loadMoney">Load Money</string>
    <string name="policyNo">Policy Number</string>
    <string name="cashColl">Cash Collected</string>
    <string name="title_activity_forgot_password1">ForgotPassword1</string>
    <string name="CustomerName">Enter Name</string>
    <string name="emailId">Enter Email Id</string>
    <string name="balanceTransfer">Balance Transfer</string>
    <string name="paymentTransfer">Payment Transfer</string>
    <string name="btnTransfer">Transfer</string>
    <string name="changedMpinSucessfully">Changed Mpin Successfully</string>
    <string name="getbillamnt">Get Bill Amount</string>
    <string name="error_mobile_required">Mobile Number required</string>
    <string name="error_customer_id_required">CustomerID required</string>
    <string name="error_phone_length">Mobile Number should be of 10 digits.</string>
    <string name="error_customer_id_length">CustomerID should be of 12 digits.</string>
    <string name="error_mpin_required">MPIN required</string>
    <string name="error_mpin_length">MPIN should be of 8 digits.</string>
    <string name="error_password_required">MPIN required</string>
    <string name="error_password_length">MPIN should be of 8 digits.</string>
    <string name="error_oldmpin_required">Old MPIN required</string>
    <string name="error_oldmpin_length">The Old MPIN should be 8 numeric characters only</string>
    <string name="error_newmpin_required">New MPIN required</string>
    <string name="error_newmpin_length">The New MPIN should be 8 numeric characters only</string>
    <string name="error_old_newmpin">The Old MPIN and New MPIN cannot be same</string>
    <string name="error_conmpin_required">Confirm MPIN required</string>
    <string name="error_conmpin_length">The Confirm MPIN should be 8 numeric characters only</string>
    <string name="error_new_confirmmpin">New MPIN and Confirm MPIN does not match</string>
    <string name="error_policy_number">Please Enter 10 digit Policy Number</string>
    <string name="error_tpin_required">TPIN required</string>
    <string name="error_tpin_length">TPIN should be of 8 digits.</string>
    <string name="error_oldtpin_required">Old TPIN required</string>
    <string name="error_oldtpin_length">The Old TPIN should be 8 numeric characters only</string>
    <string name="error_newtpin_required">New TPIN required</string>
    <string name="error_newtpin_length">The New TPIN should be 8 numeric characters only</string>
    <string name="error_contpin_required">Confirm TPIN required</string>
    <string name="error_contpin_length">The Confirm TPIN should be 8 numeric characters only</string>
    <string name="error_new_confirmtpin">New TPIN and Confirm TPIN does not match</string>
    <string name="error_old_newtpin">The Old TPIN and New TPIN cannot be same</string>
    <string name="error_bookTransid">Transaction ID required</string>
    <string name="error_bookcomment">Enter Coment</string>
    <string name="error_giftoccas_required">Enter Occasion</string>
    <string name="error_giftdesc_required">Enter Description</string>
    <string name="error_giftsentto_required">Enter Sent to</string>
    <string name="error_giftsentfrom_required">Enter Sent from</string>
    <string name="error_giftamount_required">Enter Amount</string>
    <string name="error_loadmoney_name">Enter Name</string>
    <string name="error_loadmoney_email">Enter Email</string>
    <string name="error_loadmoney_amount">Enter Amount</string>
    <string name="prompt_Validity_DOB_Age">Minimum age of 18 years required for SignUp</string>
    <string name="error_balancemobno">Mobile No required</string>
    <string name="error_balancemoney_amount">Enter Amount</string>
    <string name="error_subscriberid">Subscriber ID required</string>
    <string name="error_subscriberid_correct">Please enter Correct Subscriber ID</string>
    <string name="error_customermobno">Customer Mobile No required</string>
    <string name="moneyorder_customerno">Enter Customer Number</string>
    <string name="mobile_recharge_amount">Amount should be between Rs.10 to Rs.10000</string>
    <string name="mobile_recharge_mobile_no">Please Enter Mobile Number</string>
    <string name="mobile_recharge_mobile_no_length">Please Enter 10 digit Mobile Number</string>
    <string name="mobile_recharge_select_type">Please Select Type</string>
    <string name="error_amount">Enter Amount</string>
    <string name="signing">Loging</string>
    <string name="send_money">Send Money</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="transaction_description">Enter Transaction Description</string>
    <string name="str_tpin">Enter TPIN</string>
    <string name="validity">Validity</string>
    <string name="talktime">Talktime</string>
    <string name="tab_cab">Tab Cab</string>
    <string name="sathi_id">SAATHI ID</string>
    <string name="enter_sathi_mobno">Mobile Number</string>
    <string name="sathi_amountno">Enter Amount </string>
    <string name="description">Description</string>
    <string name="transaction_history">transaction_history</string>
</resources>