<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/five"
    android:background="@color/gray">



    <LinearLayout
        android:id="@+id/textView1"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/amount"
            android:layout_width="5dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/amount" />
        <TextView
            android:id="@+id/validity"
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/validity" />
        <TextView
            android:id="@+id/talktime"
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/talktime" />

        <!--<CheckBox-->
            <!--android:id="@+id/cbBox"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical" >-->
        <!--</CheckBox>-->

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/textView1"
        android:id="@+id/textView3"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:textColor="@color/submit_color"
            android:textSize="@dimen/twenty"
            android:id="@+id/tvDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>
</RelativeLayout>